--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "d3": "^5.7.0",
+    "firebase": "^5.8.1",
     "lodash": "^4.17.11",
     "vue": "^2.5.21",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuefire": "^2.0.0-alpha.20"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
