--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "d3": "^5.7.0",
+    "d3-tip": "^0.9.1",
     "firebase": "^5.8.1",
     "lodash": "^4.17.11",
     "vue": "^2.5.21",
